--- a/Factory/Views/Machines/Delete.cshtml
+++ b/Factory/Views/Machines/Delete.cshtml
@@ -1,4 +1,13 @@
-@{
-  Layout = "_Layout";
-}
+@model Factory.Models.Machine
 
+<h2>Are you sure you want to delete @Model.MachineName?<h2>
+
+<h4>
+@using (Html.BeginForm())
+{
+    <input type="submit" value="Delete" />
+}
+<hr />
+
+<button>@Html.ActionLink("Back to List", "Index")</button>
+</h4>
