--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -1,10 +1,14 @@
-@{
-  Layout = "_Layout";
-}
- 
-    <h1>To Do List Item Details: </h1>
+@model Factory.Models.Machine
 
-    <h2>@Model.Description</h2>
+@using Factory.Models
 
-    <a href='/items/new'>Add another item</a>
-    <a href='/items'>View all items</a>
+
+    <h1>Factory Machine Details: </h1>
+
+    <h2>@Model.MachineName</h2>
+    
+    <button>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId})</)</button>
+
+   <button>@Html.ActionLink("Home", "Index", "Home")</button>
+   <button>@Html.ActionLink("Add another Machine", "Create")</button>
+   <button>@Html.ActionLink("Edit Machine", "Edit", new { id = Model.MachineId})</button>
