--- a/Factory/Views/Home/Index.cshtml
+++ b/Factory/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
         <h5>@Html.ActionLink(@engineer.EngineerName, "Details", "Engineers", new { id = @engineer.EngineerId})</h5>
       }
   }
+  <button>@Html.ActionLink("Manage Engineers", "Index", "Engineers")</button>
 </div>
 <hr />  
 <div class="card">
@@ -30,8 +31,12 @@
         <h5>@Html.ActionLink(@machine.MachineName, "Details", "Machines", new { id = @machine.MachineId})</h5>
       }
   }
+  <button>@Html.ActionLink("Manage machines", "Index", "Machines")</button>
 </div>
 
-<button>@Html.ActionLink("Manage machines", "Index", "Machines")</button>
+
+
+
+
 
 
