--- a/Factory/Views/Engineers/Details.cshtml
+++ b/Factory/Views/Engineers/Details.cshtml
@@ -6,26 +6,24 @@
 
 <h3>Engineer: @Model.EngineerName</h3>
 
-@if (@Model.JoinEntities.Count == 0)
+@if (Model.JoinEntities.Count == 0)
 {
-    @if (Model.JoinEntities.Count == 0)
-    {
-      <p class="pl-details">This Engineer is not licensed to any machines</p>
-    }
+  <p class="pl-details">This Engineer is not licensed to any machines</p>
 }
 else
 {
-    <h4>This Engineer is liscened to :</h4>
-
-    <ul>
-        @foreach (MachineEngineer join in Model.JoinEntities)
-        {
-            <li>@join.Machine.MachineName</li>
-        }
-    </ul>
-
+  <h4>This Engineer is licensed to :</h4>
+  @foreach (MachineEngineer join in Model.JoinEntities)
+  {
+    <h5>@Html.ActionLink($"{join.Machine.MachineName}", "Details", "Machines", new { id = join.Machine.MachineId })</h5>
+    @using (Html.BeginForm("DeleteJoin", "Engineers"))
+    {
+      @Html.Hidden("joinId", @join.MachineEngineerId)
+      <input type="submit" value="Delete" />
+    }
+  }
 }
-<button>@Html.ActionLink("Add a machine", "AddMachine", new {id = Model.EngineerId})</button>
+<button>@Html.ActionLink("Add a machine", "AddMachine", new { id = Model.EngineerId })</button>
 <button>@Html.ActionLink("Delete", "Delete", new { id = Model.EngineerId })</button>
 <button>@Html.ActionLink("Edit", "Edit", new { id = Model.EngineerId })</button>
 <button>@Html.ActionLink("Back to list", "Index")</button>
