--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -9,9 +9,11 @@
 </head>
 
 <body>
+  <a href="/">
+  <img src="~/img/silly.png" alt="Dr. Sillystringz's Factory" class="img-fluid" />
+  </a>
   @await Html.PartialAsync("_Header")
   @RenderBody()
-  @await Html.PartialAsync("_Footer")
 </body>
 
 </html>
