--- a/Factory/Views/Shared/_Header.cshtml
+++ b/Factory/Views/Shared/_Header.cshtml
@@ -1,3 +1,6 @@
-<div>
-  <h1 id="header">Dr. SillyStringz's Factory </h1>
-</div>
+
+  <div class="title">
+  <h1>Dr. SillyStringz Factory</h1>
+  </div>  
+
+
