--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -1,82 +1,127 @@
 body {
+  background-color: #f3eedd;
   margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #D9D9D9;
-  text-align: center;
-  color: #032B43;
+  font-family: 'Arial', sans-serif;
 }
 
-h1, p {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  color: #3a3a3a;
+  padding: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+img {
+  width: 80px;
+  transition: transform 0.3s ease-in-out;
+  float: left;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+.header h1 {
   margin: 0;
-  font-weight: bold;
+  color: #0057a6;
 }
 
 h1 {
-  font-size: 24px;
-  margin-bottom: 16px;
+  color: #ec4d37;
+  margin: 10px 0;
 }
 
-p {
-  font-size: 16px;
-  margin-bottom: 8px;
+html {
+  text-align: center;
+  border: 5px solid #f4cb52;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: #009b48;
+  background-color: #f4cb52;
+  padding: 10px;
+  font-weight: bold;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  margin-top: 20px;
+}
+
+h2 {
+  color: #0057a6;
+}
+
+h3#footer {
+  color: #009b48;
+}
+
+h3,
+h4,
+h5 {
+  color: #f49f28;
 }
 
 a {
+  color: #0057a6;
   text-decoration: none;
-  color: #032B43;
-  font-size: 16px;
-  margin-top: 16px;
-  display: inline-block;
-  padding: 8px 16px;
-  border-radius: 4px;
-  transition: background-color 0.3s, color 0.3s;
 }
 
 a:hover {
-  background-color: #13bdd0;
-  color: #fff;
+  text-decoration: underline;
+}
+
+p {
+  color: #f49f28;
+  font-size: 20px;
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 16px;
-  color: #D9D9D9;
-  background-color: #032B43;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  color: #0057a6;
 }
 
-input {
-  margin-bottom: 8px;
-  padding: 8px 16px;
-  border-radius: 4px;
-  border: none;
-  width: 50%;
+.card {
+  background: #f4cb52;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-button{
+.card-body {
+  padding: 20px;
+}
 
-  border-radius: 4px;
-  border: none;
-  background-color: #13bdd0;
+label {
+  font-weight: bold;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.btn-primary {
+  background-color: #f49f28;
+  border-color: #009b48;
   color: #fff;
-  transition: background-color 0.3s, color 0.3s;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-.footer{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  background-color: #032B43;
-  color: #D9D9D9;
-  padding: 8px 0;
+.btn-primary:hover {
+  background-color: #ec4d37;
+  border-color: #0057a6;
+}
+
+.header {
+  text-align: center;
+  background-color: #f4cb52;
 }
