--- a/Factory/wwwroot/css/styles.css
+++ b/Factory/wwwroot/css/styles.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+
 body {
   background-color: #f3eedd;
   margin: 0;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Amatic SC', cursive;
 }
 
 .header {
@@ -125,3 +127,4 @@ label {
   text-align: center;
   background-color: #f4cb52;
 }
+
